fix download of model

--- a/6.1-model_deployment-deploying_the_model.ipynb
+++ b/6.1-model_deployment-deploying_the_model.ipynb
@@ -76,7 +76,7 @@
     "import os\n",
     "\n",
     "if not os.path.isfile('saved_model_161121.pkl'):\n",
-    "    urllib.request.urlretrieve('https://www.dropbox.com/s/zrg2u479rt0ef6u/saved_model_161121.pkl?dl=1')"
+    "    urllib.request.urlretrieve('https://www.dropbox.com/s/zrg2u479rt0ef6u/saved_model_161121.pkl?dl=1', filename='saved_model_161121.pkl')"
    ]
   },
   {
